try to fix layout on ios

--- a/style.css
+++ b/style.css
@@ -3,37 +3,32 @@
   font-family: "Montserrat", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-body {
+bbody {
   margin: 0;
-  background: #000; /* desktop bars */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background: #000;
   height: 100vh;
 }
 
-/* 9:16 phone frame */
 #viewport {
   aspect-ratio: 9 / 16;
   height: 100vh;
   max-height: 100vh;
+
   width: auto;
   max-width: calc(100vh * 9 / 16);
 
+  margin: 0 auto;
+
   background: url("images/bg.png") center center / cover no-repeat;
 
-  display: flex;
-  justify-content: center;
+  position: relative;
 }
 
 /* game content */
 #game {
   width: 100%;
+  padding: 10px;
   padding-top: 300px;
-
-  padding-left: calc(10px + env(safe-area-inset-left));
-  padding-right: calc(10px + env(safe-area-inset-right));
-  padding-bottom: env(safe-area-inset-bottom);
 
   position: relative;
 }
